fixed the goddamn overflow issue on mobile and added some pics

--- a/styles.css
+++ b/styles.css
@@ -100,17 +100,21 @@ h1 {
 #photo-main img{
 	height: 50vw;
 	object-fit: cover;
-	padding: 10%;
+	/*padding: 10%;*/
 	display: block;
+	border-radius: 70px;
 	transition: 0.5s;
 }
 #photo-main img:hover {
 	filter: drop-shadow(0 10px 5px #3332);
-	transform: scale(1.03);
+	/*transform: scale(1.03);*/
+	border-radius: 0px;
 }
 @media (max-width: 576px) {
 	#photo-main img {
 		height: 100vw;
+		transform: scale(0.9);
+		box-sizing: border-box;
 	}
 }
 @media (min-width: 992px){
@@ -119,7 +123,7 @@ h1 {
 	}	
 }
 #gallery-item {
-	/*padding:0% 1% 5%;*/
+	padding: 2% 2%;
 }
 /*end styling for photos page*/
 
@@ -129,6 +133,11 @@ h1 {
 	opacity: 1;
 	/*filter: sepia(1);*/
 	position: relative;
+}
+.mediaThumbnail img {
+	width: 100%; 
+	height: 100%; 
+	object-fit: cover;
 }
 .mediaThumbnail:hover {
 	filter: brightness(100%);
